# dotfiles

./: .dockerignore  .gitignore  .gitmodules  Bakefile  Dockerfile  Makefile  README.md  VARIABLES  bootstrap.sh  build.py  clones.json  install.py  justfile  requirements.txt
.github/workflows/: image.yml  release.yml
bootstrap/: Cargo.toml  release.toml
bootstrap/src/: main.rs
bootstrap/src/strap/: binman.rs  cloud.rs  config.rs  dotfiles.rs  fonts.rs  installers.rs  lib.rs  menmos.rs  repo.rs  scripts.rs  tools.rs  util.rs
config/: compton.conf  starship.toml
config/beets/: config.yaml
config/darkman/: config.yaml
config/eww/: eww.scss  eww.yuck
config/fish/: fish_variables
config/fuzzel/: dark.ini  fuzzel.ini  light.ini
config/ghostty/: config
config/hypr/: hyprpaper.conf
config/i3/: bar.py  bar_requirements.txt  config
config/kitty/: catppuccin_macchiato.conf  kitty.conf
config/mako/: config
config/mpd/: mpd.conf
config/neovide/: config.toml
config/niri/: config.kdl
config/nushell/: aliases.nu  config.nu  env.nu  functions.nu  init.nu  jd.nu  keybinds.nu  linux.nu  macos.nu
config/polybar/: config  new_cfg
config/rmpc/: config.ron
config/rofi/: config  config.rasi  sidestyle.rasi
config/swaylock/: config
data/: binman_packages.txt  menmos_blobs.json  nu.toml
dotfiles/: Xresources  aliases  dockerfunc  functions  gitignore  ideavimrc  path  prompt  ripgreprc  tmux.conf  tools  zshrc
elasticworkspace/: Dockerfile  main.py
i3/: bar.py
installer/: __init__.py  config.py  datahose.py  dotfiles.py  fonts.py  scripts.py  tools.py  util.py
installers/: orc.py  project.sh
rtv/: Dockerfile
scripts/: 000 - prereqs.sh  000 - rust.fish  001 - languages.fish  001 - nushell.sh  002 - starship.fish  002 - tools.fish  clang  direnv  github-cli  go  jd  just  linux_fix_screens.sh  linux_lock.sh  linux_polybar.sh  linux_runtmux  linux_screensetup  nushell.sh  rust.fish  starship  starship.fish  sub  worktimer  zoxide  zoxide.sh
strap/: config.fish  data.fish  dotfiles.fish  fonts.fish  lib.fish  neovim.fish  scripts.fish  setup.fish  tools.fish
tools/: bigswap  xs
(+110 files in other folders)
