[package]
name = "bootstrap"
version = "0.2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "strap"
path = "src/strap/lib.rs"

[[bin]]
name = "bootstrap"

[dependencies]
anyhow = "1"
binman = {git = "https://github.com/purposed/binman.git", rev = "5ed5e11"}
clap = {version = "3.1.8", features = ["derive"]}
dirs = "3"
futures = "0.3"
fs_extra = "1.2"
rood = "0.4.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1"
shellexpand = "2.1"
tokio = {version = "1", features=["full"]}
walkdir = "2"
